--- a/style.css
+++ b/style.css
@@ -30,11 +30,18 @@ img {
     width  : 100%;
     display: block;
     margin : 0 auto;
+    max-width: 250px;
 }
 
 p {
     line-height: 1.2em;
+    text-align: center;
 }
+
+h1 {
+    text-align: center;
+}
+
 /** Caption styles */
 .caption,
 figcaption {
@@ -98,6 +105,23 @@ figcaption {
     top     : 0;
     left    : 0;
     border  : 0;
+}
+
+.lights-off {
+    display: none;
+}
+
+.off .lights-off {
+    display: block;
+}
+
+.off .lights-on {
+    display:none;
+}
+
+.off {
+    background-color: black;
+    color: white;
 }
 /*********************************************************************
   YOUR TABLET/DESKTOP STYLES GO HERE
